<resources>
    <string name="app_name">ShoppingList</string>
    <string name="estimated_bought">Estimated bought</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="item_logo">Item logo</string>
    <string name="add_item">Add item</string>
    <string name="shopping_list">Shopping List</string>
    <string name="shopping_carts">Shopping karts logo</string>
    <string name="loading">Loading…</string>
    <string name="add_shopping_item">Add shopping item</string>
    <string name="name">Name</string>
    <string name="add_item_logo">Add item logo</string>
    <string name="type">Type:</string>
    <string name="list_of_type">List of type</string>
</resources>