<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    app:cardBackgroundColor="#fff6a0"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivItemLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher"
            android:contentDescription="@string/item_logo"
            />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/ivItemLogo"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Potato" />

        <TextView
            android:id="@+id/tvEstimatedPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/ivItemLogo"
            app:layout_constraintTop_toBottomOf="@+id/tvName"
            tools:text="89.99" />

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/cbBoughtStatus"
            app:layout_constraintTop_toBottomOf="@+id/tvEstimatedPrice"
            tools:text="Food" />

        <CheckBox
            android:id="@+id/cbBoughtStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estimated_bought"
            app:layout_constraintStart_toEndOf="@+id/ivItemLogo"
            app:layout_constraintTop_toBottomOf="@+id/tvCategory" />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
